packages/typ/tests/fixtures/diagnostics/0005_core_tuple_annotation_mismatch_01.ml.infer.expected
File "0005_core_tuple_annotation_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0005_core_tuple_annotation_mismatch_01 is not a valid module name.

File "0005_core_tuple_annotation_mismatch_01.ml", line 1, characters 26-30:
1 | let alpha : int * bool = (true, 0)
                              ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
