packages/typ/tests/fixtures/diagnostics/0005_core_tuple_annotation_mismatch_01.ml
let alpha : int * bool = (true, 0)
